<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_page_drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    tools:context=".activities.MainActivity"
    tools:ignore="HardcodedText">

    <include
        android:id="@+id/ownToolbar"
        layout="@layout/own_toolbar" />

    <TextView
        android:id="@+id/important_notice_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ownToolbar"
        android:background="@color/light_red"
        android:gravity="center"
        android:padding="10dp"
        android:text="This is for notice"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/important_notice_tv">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="7dp"
            android:layout_marginBottom="7dp"
            android:background="?attr/background_color"
            app:tabIconTint="@color/grey"
            app:tabIndicatorColor="@color/white"
            app:tabInlineLabel="true"
            app:tabMode="scrollable"
            app:tabRippleColor="@color/white"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/grey">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/subtitles_24"
                android:text="@string/subbed" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/mic_double_24px"
                android:text="@string/dubbed" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/chinese"
                android:text="@string/chinese" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/category_24"
                android:text="@string/genres" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/trending_up_24"
                android:text="@string/popular" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/movie_filter_24"
                android:text="@string/movies" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/fragmentContainerViewPager2Main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tabLayout" />

    </RelativeLayout>

</RelativeLayout>